<resources>
    <string name="app_name">UI</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="listview">ListView</string>
    <string name="dialog">Dialog</string>
    <string name="menu">Menu</string>
    <string name="signin">Sign In</string>
    <string name="cancel">Cancel</string>
    <string name="textsize">字体大小</string>
    <string name="plainmenu">普通菜单项</string>
    <string name="fontcolor">字体颜色</string>
    <string name="samll">小</string>
    <string name="big">大</string>
    <string name="middle">中</string>
    <string name="red">红</string>
    <string name="black">黑</string>
    <string name="actionmode">ActionMode</string>
    <string name="delete">删除</string>
</resources>
